--- a/19-webcam-fun/style.css
+++ b/19-webcam-fun/style.css
@@ -1,6 +1,8 @@
 body, html {
   margin: 0;
   padding: 0;
+  background: linear-gradient(to bottom, #EEE, #FFF);
+  min-height: 100%;
 }
 
 .container {
